Updated mem_max + plugin_db

--- a/etc/yawgd/yawgd.conf
+++ b/etc/yawgd/yawgd.conf
@@ -1,7 +1,7 @@
 ### Global Settings
 name = yawgd
 init_script = /etc/init.d/yawgd
-mem_max = 20
+mem_max = 50
 
 ### RRD Settings
 rrd_dir = /var/www/rrd/
@@ -23,7 +23,7 @@ eib_logging = 0
 eiblogfile = /var/log/yawgd-eib.log
 
 ### Plugins
-plugin_db_name = plugin_database.db
+plugin_db_name = yawgd_plugin.db
 plugin_db_path = /etc/yawgd/
 # path and name of the Plugin-Logfile
 plugin_logfile = /var/log/yawgd-plugin.log
